footer from react cv

--- a/styles/sass/layout/_footer.scss
+++ b/styles/sass/layout/_footer.scss
@@ -35,6 +35,7 @@
         ul {
             display: flex;
             justify-content: center;
+            gap: 2px;
             margin: 20px 0;
             li {
                 position: relative;
