--- a/styles/sass/helpers/_variables.scss
+++ b/styles/sass/helpers/_variables.scss
@@ -51,7 +51,7 @@ $cyan: #323232;
 $theme-primary-color: #e5540a;
 $theme-primary-color-s2: #B88888;
 $body-bg-color: #fff;
-$card-bg-color: #f5f5f5;
+$card-bg-color: #fffdfd;
 $text-color: #676767;
 $text-color2: #EDB9B8;
 $text-light-color: #676767;
